# elo_calculator

./: Readme.md  example.csv  main.py  pyproject.toml
