[tool.poetry]
name = "elo-calculator"
version = "0.1.0"
description = ""
authors = ["tas17 <35601762+tas17@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
